--- a/header-footer-grid/assets/scss/frontend/components/_nav-menus.scss
+++ b/header-footer-grid/assets/scss/frontend/components/_nav-menus.scss
@@ -1,18 +1,5 @@
 // Hover Styles
 .style-border-top, .style-border-bottom, .style-full-height {
-  ul > li:not(.menu-item-nav-search):not(.menu-item-nav-cart) > a:after {
-    position: absolute;
-    content: "";
-    display: block;
-    margin: 0 auto;
-    width: 0;
-    height: 2px;
-    background-color: #0366d6;
-    transition: opacity .3s ease, width .3s ease;
-    right: 0;
-    left: 0;
-  }
-
   ul > li:hover > a {
     text-decoration: none;
 
@@ -154,6 +141,22 @@
       display: flex;
       align-items: center;
       justify-content: flex-end;
+    }
+  }
+
+  .style-border-top, .style-border-bottom, .style-full-height {
+    ul > li:not(.menu-item-nav-search):not(.menu-item-nav-cart) > a:after {
+      position: absolute;
+      content: "";
+      display: block;
+      margin: 0 auto;
+      width: 0;
+      height: 2px;
+      background-color: #0366d6;
+      transition: opacity .3s ease, width .3s ease;
+      right: 0;
+      left: 0;
+      pointer-events: none;
     }
   }
 }
